packages/@resist.js/svelte-kit/test/apps/basics/src/routes/errors/endpoint.json.js
/** @type {import('@resistjs/svelte-kit').RequestHandler} */
export function get() {
	throw new Error('nope');
}
